--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tentang Kami</title>
+  <title>about</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Tentang EduSmart</h1>
+    <h1>penjelasan Tentang MatematikaMU</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
