--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Kontak Kami</h1>
+    <h1>Silahkan Mendaftar Disini!</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
